test/cases/compile_errors/import_outside_module_path.zig
comptime {
    _ = @import("../a.zig");
}

// error
//
// :2:17: error: import of file outside module path
